adding the database{

--- a/render.yaml
+++ b/render.yaml
@@ -25,3 +25,8 @@ services:
 databases:
   - name: gurukul-db
     plan: free
+    databaseName: gurukul
+    user: gurukul_user
+    engine: mysql
+    version: "8"
+    ipAllowList: []
